@@ -256,6 +256,7 @@ module Druid
     #   :index
     #   :name
     #   :xpath
+    #   :label
     # @param optional block to be invoked when element method is called
     #
     def select_list(name, identifier={:index => 0}, &block)
@@ -296,6 +297,7 @@ module Druid
     #   * :name
     #   * :xpath
     #   * :value
+    #   * :label
     # @param optional block to be invoked when element method is called
     #
     def radio_button(name, identifier={:index => 0}, &block)
@@ -611,6 +613,7 @@ module Druid
     #   * :index
     #   * :name
     #   * :xpath
+    #   * :label
     # @param optional block to be invoked when element method is called
     #
     def text_area(name, identifier={:index => 0}, &block)
@@ -852,6 +855,7 @@ module Druid
     #   * :name
     #   * :title
     #   * :xpath
+    #   * :label
     # @param optional block to be invoked when element method is called
     #
     def file_field(name, identifier={:index => 0}, &block)
