@@ -2,6 +2,9 @@ module Druid
   module Elements
     class TextArea < Element
 
+      def self.finders
+        super + [:label]
+      end
       #
       # Set the value of the TextArea
       #
