@@ -3,6 +3,7 @@
   * Added :using_params parameter to both on_page and if_page methods
   * Fixed issue with generic element calls
   * Added support for the svg element
+  * Support label locators on TextArea, SelectList, RadioButton and FileField                                                                                                            
 === Version-1.1.7/2017-01-16
 * Enhancements
   * Updated expected_element to use the global default element wait by default
